--- a/src/update5/org/cict/student/layout/student-home.fxml
+++ b/src/update5/org/cict/student/layout/student-home.fxml
@@ -167,6 +167,7 @@
                   <HBox alignment="CENTER_RIGHT" spacing="10.0">
                      <children>
                         <JFXButton fx:id="btn_new_student" prefHeight="46.0" prefWidth="259.0" styleClass="metro-nav-button" text="New Student" />
+                        <JFXButton fx:id="btnImportStudent" prefHeight="46.0" prefWidth="259.0" styleClass="metro-nav-button" text="Import Student" />
                         <JFXButton fx:id="btn_home" prefHeight="46.0" prefWidth="259.0" styleClass="metro-nav-button" text="Home" />
                      </children>
                   </HBox>
