--- a/src/update4/org/cict/linked_manager/LinkedHome.fxml
+++ b/src/update4/org/cict/linked_manager/LinkedHome.fxml
@@ -134,7 +134,7 @@
             </VBox>
             <StackPane HBox.hgrow="ALWAYS">
                <children>
-                  <VBox fx:id="vbox_home" prefHeight="200.0" prefWidth="100.0">
+                  <VBox fx:id="vbox_home" prefHeight="200.0" prefWidth="100.0" visible="false">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
@@ -534,7 +534,7 @@
                         <Insets left="20.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="vbox_marshalls" prefHeight="200.0" prefWidth="100.0" visible="false">
+                  <VBox fx:id="vbox_marshalls" prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
@@ -556,6 +556,18 @@
                                     <ImageView fitHeight="23.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@images/marshall.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </JFXButton>
+                              <JFXButton fx:id="btn_remove_all" layoutX="689.0" layoutY="12.0" prefHeight="41.0" prefWidth="195.0" style="-fx-border-color: #FFFFFF;" text="Remove All" textFill="WHITE">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                                 <graphic>
+                                    <ImageView fitHeight="23.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@images/icons8-trash-50.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
