--- a/src/update3/org/cict/access/management/AccessManagementHome.fxml
+++ b/src/update3/org/cict/access/management/AccessManagementHome.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXCheckBox?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -948,14 +948,11 @@
                                     <Insets bottom="10.0" top="10.0" />
                                  </padding>
                               </HBox>
-                              <JFXCheckBox fx:id="chkbx_enable_autobackup" checkedColor="WHITE" text="Enable Automatic Backup" textFill="WHITE" unCheckedColor="WHITE">
+                              <CheckBox fx:id="chkbx_enable_autobackup" mnemonicParsing="false" text="Enable Automatic Backup" textFill="WHITE">
                                  <font>
                                     <Font size="20.0" />
                                  </font>
-                                 <VBox.margin>
-                                    <Insets left="-7.0" />
-                                 </VBox.margin>
-                              </JFXCheckBox>
+                              </CheckBox>
                               <HBox layoutX="40.0" layoutY="162.0" prefWidth="200.0" spacing="10.0">
                                  <children>
                                     <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
